2018-05-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Allow non-ascii file names for pdfTeX (w32 only).
	Changes on 2018-05-11 were incomplete.

2018-05-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Allow non-ascii file names for pdfTeX (w32 only).

2018-03-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Remove support of short 8.3 names (w32 only).

2018-01-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* printversion.c: 2017 ---> 2018.

2017-10-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* openclose.c: If opened fname is a directory in
	output_directory, discard it in Unix platforms.
	Report from Duncan Steele,
	http://tug.org/pipermail/tex-live/2017-October/040731.html
	
	In Windows, fopen (fname, mode) is always NULL, in the case
	where fname is a directory, thus it is discarded automatically.
	Thanks to Hironobu Yamashita,
	http://tug.org/pipermail/tex-live/2017-October/040735.html

2017-09-05  Karl Berry  <karl@tug.org>
        and Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c (IS_SPC_OR_EOL): new macro.
	(topenin): use it, instead of ISBLANK.
	(parse_first_line): doc fix.
	(input_line): remove only trailing space characters
	instead of using ISBLANK.
	See also analogous change in xetexdir/XeTeX_ext.c.
	Original bug report from Evan Aad,
	http://tug.org/pipermail/tex-k/2017-August/002801.html

2017-03-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Adopt Jonathan's solution for the Change on 2017-02-01.

2017-02-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: unsigned long long >= 0. Thanks Luigi.

2017-02-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Avoid a crash in xelatex for
	http://tug.org/pipermail/xetex/2017-January/026975.html.
	It is not a fix but a stopgap.

2017-01-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* printversion.c: 2016 ---> 2017.

2016-11-14  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
