@@ -674,7 +674,7 @@ void
 maininit (int ac, string *av)
 {
   string main_input_file;
-#if (IS_upTeX || defined(XeTeX) || defined(pdfTeX)) && defined(WIN32)
+#if (IS_upTeX || defined(XeTeX)) && defined(WIN32)
   string enc;
 #endif
   /* Save to pass along to topenin.  */
@@ -703,10 +703,10 @@ maininit (int ac, string *av)
   kpse_set_program_name (argv[0], NULL);
   initkanji ();
 #endif
-#if (defined(XeTeX) || defined(pdfTeX)) && defined(WIN32)
+#if defined(XeTeX) && defined(WIN32)
   kpse_set_program_name (argv[0], NULL);
 #endif
-#if (IS_upTeX || defined(XeTeX) || defined(pdfTeX)) && defined(WIN32)
+#if (IS_upTeX || defined(XeTeX)) && defined(WIN32)
   enc = kpse_var_value("command_line_encoding");
   get_command_line_args_utf8(enc, &argc, &argv);
 #endif
@@ -714,7 +714,7 @@ maininit (int ac, string *av)
   /* If the user says --help or --version, we need to notice early.  And
      since we want the --ini option, have to do it before getting into
      the web (which would read the base file, etc.).  */
-#if (IS_upTeX || defined(XeTeX) || defined(pdfTeX)) && defined(WIN32)
+#if (IS_upTeX || defined(XeTeX)) && defined(WIN32)
   parse_options (argc, argv);
 #else
   parse_options (ac, av);
@@ -738,7 +738,7 @@ maininit (int ac, string *av)
   /* Do this early so we can inspect kpse_invocation_name and
      kpse_program_name below, and because we have to do this before
      any path searching.  */
-#if IS_pTeX || ((defined(XeTeX) || defined(pdfTeX)) && defined(WIN32))
+#if IS_pTeX || (defined(XeTeX) && defined(WIN32))
   if (user_progname)
     kpse_reset_program_name (user_progname);
 #else
