@@ -1,3 +1,9 @@
+2018-05-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* synctex.c: Discard the changes on 2018-05-11, since
+	'command_line_encoding=utf-8' is not so natural for
+	pdfTeX (w32 only).
+
 2018-05-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* synctex.c: Allow non-ascii file names also for pdfTeX
