@@ -1,3 +1,9 @@
+2018-05-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* texmfmp.c: Discard the changes for pdfTeX on 2018-05-11,
+	since 'command_line_encoding=utf-8' is not so natural
+	for pdfTeX (w32 only).
+
 2018-05-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* texmfmp.c: Allow non-ascii file names for pdfTeX (w32 only).
